--- a/app/src/main/res/layout/rcy_item_continue_watching.xml
+++ b/app/src/main/res/layout/rcy_item_continue_watching.xml
@@ -14,6 +14,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+<!--        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView-->
+<!--            android:id="@+id/imgWatched"-->
+<!--            android:layout_width="104dp"-->
+<!--            android:layout_height="136dp"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintBottom_toTopOf="@id/guide"-->
+<!--            app:autoPlay="false"/>-->
+
         <ImageView
             android:id="@+id/imgWatched"
             android:layout_width="104dp"
