--- a/app/src/main/res/layout/fragment_downloads.xml
+++ b/app/src/main/res/layout/fragment_downloads.xml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.downloads.ui.DownloadsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/txtPageName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Downloads"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="25sp"
+        />
+
+    <ImageView
+        android:id="@+id/imgSearch"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:padding="3dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_search"
+        app:layout_constraintBottom_toBottomOf="@id/txtPageName"
+        app:layout_constraintEnd_toStartOf="@id/imgProfile"
+        app:layout_constraintTop_toTopOf="@id/txtPageName" />
+
+
+    <ImageView
+        android:id="@+id/imgProfile"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:padding="3dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/img"
+        app:layout_constraintBottom_toBottomOf="@id/txtPageName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/txtPageName" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
