--- a/app/src/main/res/layout/fragment_get_started.xml
+++ b/app/src/main/res/layout/fragment_get_started.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragments.getstarted.ui.GetStartedFragment">
+        tools:context=".presentation.fragments.getstarted.ui.GetStartedFragment">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/getStartedViewPager"
