--- a/app/src/main/res/layout/fragment_finish_sign_up.xml
+++ b/app/src/main/res/layout/fragment_finish_sign_up.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.finish_signup.ui.FinishSignUpFragment">
+    tools:context=".presentation.fragments.finish_signup.ui.FinishSignUpFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
