--- a/app/src/main/res/layout/fragment_verify_email.xml
+++ b/app/src/main/res/layout/fragment_verify_email.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.verify_email.ui.VerifyEmailFragment">
+    tools:context=".presentation.fragments.verify_email.ui.VerifyEmailFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
