--- a/app/src/main/res/navigation/nav_graph1.xml
+++ b/app/src/main/res/navigation/nav_graph1.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/getStartedFragment"
-        android:name="com.example.myapplication.fragments.getstarted.ui.GetStartedFragment"
+        android:name="com.example.myapplication.presentation.fragments.getstarted.ui.GetStartedFragment"
         android:label="fragment_get_started"
         tools:layout="@layout/fragment_get_started" >
         <action
@@ -21,13 +21,13 @@
 
     <fragment
         android:id="@+id/signInFragment"
-        android:name="com.example.myapplication.fragments.signin.ui.SignInFragment"
+        android:name="com.example.myapplication.presentation.fragments.signin.ui.SignInFragment"
         android:label="fragment_sign_in"
         tools:layout="@layout/fragment_sign_in" />
 
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.example.myapplication.fragments.signup.ui.SignUpFragment"
+        android:name="com.example.myapplication.presentation.fragments.signup.ui.SignUpFragment"
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up">
         <action
@@ -40,7 +40,7 @@
 
     <fragment
         android:id="@+id/accountsFragment"
-        android:name="com.example.myapplication.fragments.accounts.ui.AccountsFragment"
+        android:name="com.example.myapplication.presentation.fragments.accounts.ui.AccountsFragment"
         android:label="fragment_accounts"
         tools:layout="@layout/fragment_accounts" >
         <action
@@ -50,13 +50,13 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.myapplication.fragments.home.ui.HomeFragment"
+        android:name="com.example.myapplication.presentation.fragments.home.ui.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/newHotFragment"
-        android:name="com.example.myapplication.fragments.new_hot.ui.NewHotFragment"
+        android:name="com.example.myapplication.presentation.fragments.new_hot.ui.NewHotFragment"
         android:label="fragment_new_hot"
         tools:layout="@layout/fragment_new_hot" >
         <action
@@ -66,18 +66,18 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.myapplication.fragments.search.ui.SearchFragment"
+        android:name="com.example.myapplication.presentation.fragments.search.ui.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
 
     <fragment
         android:id="@+id/downloadsFragment"
-        android:name="com.example.myapplication.fragments.downloads.ui.DownloadsFragment"
+        android:name="com.example.myapplication.presentation.fragments.downloads.ui.DownloadsFragment"
         android:label="fragment_downloads"
         tools:layout="@layout/fragment_downloads" />
     <fragment
         android:id="@+id/createAccountFragment"
-        android:name="com.example.myapplication.fragments.create_account.ui.CreateAccountFragment"
+        android:name="com.example.myapplication.presentation.fragments.create_account.ui.CreateAccountFragment"
         android:label="fragment_create_account"
         tools:layout="@layout/fragment_create_account" >
         <action
@@ -95,12 +95,12 @@
     </fragment>
     <fragment
         android:id="@+id/verifyEmailFragment"
-        android:name="com.example.myapplication.fragments.verify_email.ui.VerifyEmailFragment"
+        android:name="com.example.myapplication.presentation.fragments.verify_email.ui.VerifyEmailFragment"
         android:label="fragment_verify_email"
         tools:layout="@layout/fragment_verify_email" />
     <fragment
         android:id="@+id/finishSignUpFragment"
-        android:name="com.example.myapplication.fragments.finish_signup.ui.FinishSignUpFragment"
+        android:name="com.example.myapplication.presentation.fragments.finish_signup.ui.FinishSignUpFragment"
         android:label="fragment_finish_sign_up"
         tools:layout="@layout/fragment_finish_sign_up" >
         <action
