--- a/app/src/main/res/navigation/nav_graph1.xml
+++ b/app/src/main/res/navigation/nav_graph1.xml
@@ -52,7 +52,11 @@
         android:id="@+id/homeFragment"
         android:name="com.example.myapplication.presentation.fragments.home.ui.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_home_to_movieDetails"
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/newHotFragment"
@@ -146,5 +150,15 @@
             android:id="@+id/f_action_forNavigation_to_signUp"
             app:destination="@id/signUpFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/movieDetailsFragment"
+        android:name="com.example.myapplication.presentation.fragments.movie_details.ui.MovieDetailsFragment"
+        android:label="fragment_movie_details"
+        tools:layout="@layout/fragment_movie_details" >
+        <argument
+            android:name="movieId"
+            app:argType="long" />
+    </fragment>
+
 
 </navigation>
