--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -24,12 +24,16 @@
 
 
         <ImageButton
+            android:id="@+id/imgLogo"
             android:layout_width="130dp"
-            android:layout_height="45dp"
+            android:layout_height="48dp"
             android:backgroundTint="@android:color/transparent"
             android:padding="8dp"
             android:scaleType="fitXY"
-            android:src="@drawable/logo_netflix" />
+            android:src="@drawable/logo_netflix"
+            android:contentDescription="@string/accounts_logo_desc"/>
+
+
     </com.google.android.material.appbar.MaterialToolbar>
 
 
@@ -37,7 +41,7 @@
         android:id="@+id/txtAccountExists"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Looks like that account already exists. Sign into that account or try using a different email."
+        android:text="@string/txtAccountExists"
         android:background="@android:color/holo_orange_dark"
         android:padding="15dp"
         android:layout_marginTop="10dp"
@@ -53,7 +57,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:text="Unlimited movies, TV shows &amp; more"
+        android:text="@string/titleCreateAccount"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:layout_marginTop="15dp"
@@ -69,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="start"
-        android:text="Create an account and we'll send you an email with everything you need to know about Netflix."
+        android:text="@string/create_account_desc"
         android:textColor="@color/divider"
         app:layout_constraintEnd_toEndOf="@id/txtTitleCreateAccount"
         app:layout_constraintStart_toStartOf="@id/txtTitleCreateAccount"
@@ -80,7 +84,7 @@
         android:id="@+id/emailTil"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:hint="@string/email"
         app:layout_constraintEnd_toEndOf="@id/txtTitleCreateAccount"
         app:layout_constraintStart_toStartOf="@id/txtTitleCreateAccount"
         app:layout_constraintTop_toBottomOf="@id/txtDesc">
@@ -107,7 +111,7 @@
             android:id="@+id/edtpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -116,7 +120,7 @@
         android:id="@+id/checkBoxEmailMe"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Please do not email me Netflix special offers."
+        android:text="@string/netflix_offer_email"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/txtTitleCreateAccount"
         app:layout_constraintStart_toStartOf="@id/txtTitleCreateAccount"
@@ -128,8 +132,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@drawable/btn_get_started"
-        android:text="CREATE ACCOUNT"
-        android:textSize="24dp"
+        android:text="@string/create_account"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:theme="@style/Button.GetStarted"
         app:layout_constraintEnd_toEndOf="@id/txtTitleCreateAccount"
