--- a/app/src/main/res/layout/fragment_downloads.xml
+++ b/app/src/main/res/layout/fragment_downloads.xml
@@ -12,7 +12,7 @@
         android:id="@+id/txtPageName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Downloads"
+        android:text="@string/downloads"
         android:textSize="25sp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,7 +47,7 @@
         android:layout_marginTop="10dp"
         android:drawablePadding="5dp"
         android:padding="5dp"
-        android:text="Smart Downloads"
+        android:text="@string/smart_downloads"
         android:textColor="@color/divider"
         android:textSize="16sp"
         app:drawableEndCompat="@drawable/ic_edit"
@@ -65,7 +65,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imgRcyHeader"
@@ -73,7 +73,8 @@
                 android:layout_height="40dp"
                 android:src="@drawable/img"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/img_rcy_header"/>
 
             <TextView
                 android:id="@+id/txtRcyHeader"
@@ -111,7 +112,7 @@
                 android:id="@+id/txtTurnOn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Turn on Downloads for You"
+                android:text="@string/turn_on_downloads"
                 android:layout_marginTop="10dp"
                 android:textSize="18sp"
                 app:layout_constraintTop_toBottomOf="@id/divider"
@@ -124,7 +125,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/txtTurnOn"
-                android:text="We'll download movies and shows just for you, so you'll always have something to watch"
+                android:text="@string/downloadsDesc"
                 android:textColor="@color/divider"
                 />
 
@@ -145,7 +146,7 @@
                 android:layout_height="wrap_content"
                 app:cornerRadius="5dp"
                 app:backgroundTint="@color/blue"
-                android:text="Set Up"
+                android:text="@string/set_up"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@id/imgPosters"
                 app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +156,7 @@
                 android:id="@+id/btnFindMore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Find More to Download"
+                android:text="@string/find_more_to_download"
                 app:backgroundTint="@color/dark_gray"
                 app:cornerRadius="5dp"
                 app:layout_constraintTop_toBottomOf="@id/btnSetUp"
