--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -16,6 +16,56 @@
         />
 
 
+    <TextView
+        android:id="@+id/txtMovieName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/player"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Text"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="8dp"
+        android:textSize="25sp"
+        android:textStyle="bold"/>
+
+
+    <TextView
+        android:id="@+id/txtReleaseDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2024"
+        app:layout_constraintTop_toBottomOf="@id/txtMovieName"
+        app:layout_constraintStart_toStartOf="@id/txtMovieName"
+        android:textColor="@color/divider"
+        />
+
+    <TextView
+        android:id="@+id/txtAgeRestriction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/txtReleaseDate"
+        app:layout_constraintBottom_toBottomOf="@id/txtReleaseDate"
+        app:layout_constraintStart_toEndOf="@id/txtReleaseDate"
+        android:text="16+"
+        android:layout_marginStart="8dp"
+        android:textColor="@color/divider"
+        />
+
+    <TextView
+        android:id="@+id/txtSeasonInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/txtReleaseDate"
+        app:layout_constraintBottom_toBottomOf="@id/txtReleaseDate"
+        app:layout_constraintStart_toEndOf="@id/txtAgeRestriction"
+        android:text="1 Season"
+        android:layout_marginStart="8dp"
+        android:textColor="@color/divider"
+        android:drawableEnd="@drawable/ic_comment"
+        android:drawablePadding="4dp"
+        />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
