--- a/app/src/main/res/layout/fragment_new_hot.xml
+++ b/app/src/main/res/layout/fragment_new_hot.xml
@@ -111,7 +111,7 @@
         </com.google.android.material.chip.ChipGroup>
     </HorizontalScrollView>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollViewRcy"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -122,36 +122,39 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcyComingSoon"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:listitem="@layout/rcy_new_item_coming_soon" />
+                app:layout_constraintBottom_toTopOf="@id/rcyEveryonesWatching"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcyEveryonesWatching"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
+                android:isScrollContainer="false"
                 android:nestedScrollingEnabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rcyComingSoon" />
+                app:layout_constraintTop_toBottomOf="@id/rcyComingSoon"
+                app:layout_constraintBottom_toTopOf="@id/rcyGames"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcyGames"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rcyEveryonesWatching" />
+                app:layout_constraintTop_toBottomOf="@id/rcyEveryonesWatching"
+                app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
