--- a/app/src/main/res/layout/rcy_new_item_coming_soon.xml
+++ b/app/src/main/res/layout/rcy_new_item_coming_soon.xml
@@ -125,6 +125,7 @@
         />
 
     <TextView
+        android:id="@+id/txtGenres"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Swoonworthy - Hearfelt - Dramedy - Korean - TV"
