--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -66,6 +66,171 @@
         android:drawablePadding="4dp"
         />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnPlay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cornerRadius="5dp"
+        android:text="@string/cast_play"
+        app:icon="@drawable/ic_play"
+        app:iconGravity="textStart"
+        app:iconTint="@color/black"
+        app:backgroundTint="@color/gray"
+        android:textColor="@color/black"
+        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="5dp"
+        app:layout_constraintTop_toBottomOf="@id/txtReleaseDate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnDownload"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cornerRadius="5dp"
+        app:backgroundTint="@color/dark_gray"
+        app:icon="@drawable/ic_download"
+        android:text="Download"
+        app:iconGravity="textStart"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/btnPlay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/txtDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/btnDownload"
+        app:layout_constraintStart_toStartOf="@id/btnDownload"
+        app:layout_constraintEnd_toEndOf="@id/btnDownload"
+        android:text="lorem ipsum dolor sit amet"
+        android:textColor="@color/gray"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginTop="5dp"
+        />
+
+
+    <TextView
+        android:id="@+id/txtStarring"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Starring: "
+        app:layout_constraintTop_toBottomOf="@id/txtDescription"
+        app:layout_constraintStart_toStartOf="@id/btnDownload"
+
+        />
+
+    <TextView
+        android:id="@+id/txtStarringList"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:lines="1"
+        android:ellipsize="end"
+        app:layout_constraintTop_toTopOf="@id/txtStarring"
+        app:layout_constraintBottom_toBottomOf="@id/txtStarring"
+        app:layout_constraintStart_toEndOf="@id/txtStarring"
+        app:layout_constraintEnd_toEndOf="@id/btnDownload"
+        android:text="Nihad Ildarov"
+        android:textColor="@color/divider"/>
+
+
+    <TextView
+        android:id="@+id/txtCreators"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Creators: "
+        app:layout_constraintTop_toBottomOf="@id/txtStarring"
+        app:layout_constraintStart_toStartOf="@id/txtStarring"
+
+        />
+
+    <TextView
+        android:id="@+id/txtCreatorsList"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:lines="1"
+        android:ellipsize="end"
+        app:layout_constraintTop_toTopOf="@id/txtCreators"
+        app:layout_constraintBottom_toBottomOf="@id/txtCreators"
+        app:layout_constraintStart_toEndOf="@id/txtCreators"
+        app:layout_constraintEnd_toEndOf="@id/btnDownload"
+        android:text="Nihad Ildarov"
+        android:textColor="@color/divider"/>
+
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnAddMyList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:icon="@drawable/ic_add"
+        app:iconGravity="textTop"
+        android:text="My List"
+        app:backgroundTint="@android:color/transparent"
+        app:layout_constraintTop_toBottomOf="@id/txtCreators"
+        app:layout_constraintStart_toStartOf="@id/btnDownload"
+        app:layout_constraintEnd_toStartOf="@id/btnLike"
+        app:cornerRadius="0dp"
+        />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnLike"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:icon="@drawable/ic_thumb_up"
+        app:iconGravity="textTop"
+        android:text="Like"
+        app:backgroundTint="@android:color/transparent"
+        app:layout_constraintTop_toBottomOf="@id/txtCreators"
+        app:layout_constraintStart_toEndOf="@id/btnAddMyList"
+        app:layout_constraintEnd_toStartOf="@id/btnShare"
+        app:cornerRadius="0dp"
+        />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnShare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:icon="@drawable/ic_share"
+        app:iconGravity="textTop"
+        android:text="Share"
+        app:backgroundTint="@android:color/transparent"
+        app:layout_constraintTop_toBottomOf="@id/txtCreators"
+        app:layout_constraintStart_toEndOf="@id/btnLike"
+        app:layout_constraintEnd_toStartOf="@id/btnDownloadIc"
+        app:cornerRadius="0dp"
+        />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnDownloadIc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:icon="@drawable/ic_download"
+        app:iconGravity="textTop"
+        android:text="Download"
+        app:backgroundTint="@android:color/transparent"
+        app:layout_constraintTop_toBottomOf="@id/txtCreators"
+        app:layout_constraintStart_toEndOf="@id/btnShare"
+        app:layout_constraintEnd_toEndOf="@id/btnDownload"
+        app:cornerRadius="0dp"
+        />
+
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toBottomOf="@id/btnAddMyList"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
