--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="black_transparent">#BF000000</color>
     <color name="bottom_sheet_bg">#2B2B2B</color>
     <color name="trans">#00000000 </color>
-    <color name="semiTransparent">#80000000</color>
+    <color name="semiTransparent7">#70000000</color>
+    <color name="semiTransparent5">#50000000</color>
+
 
 </resources>
